# ForestGuard

./: .gitignore  Hi nathan  README.md  frames_2025-10-10_07.50.35.gv  frames_2025-10-11_10.27.06.gv  frames_2025-10-28_23.00.28.gv  frames_2025-10-28_23.01.05.gv  frames_2025-10-28_23.07.33.gv  frames_2025-10-29_02.19.14.gv  frames_2025-10-29_02.33.56.gv  frames_2025-10-29_14.57.46.gv  frames_2025-11-05_11.07.56.gv  frames_2025-11-05_11.45.21.gv
.github/workflows/: discord-push.yml
build_ign/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  api.dox  api.md  api_tagfile.dox  cmake_install.cmake  cmake_uninstall.cmake  cpack_options.cmake  ignition-utils1.tag.xml  install_manifest.txt  test_config.h  tutorials.md  upload_doc.sh
build_ign/cli/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_ign/cli/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_ign/cmake/: ignition-utils1-cli-targets.cmake  ignition-utils1-config.cmake  ignition-utils1-targets.cmake
build_ign/cmake/pkgconfig/: ignition-utils1-cli.pc  ignition-utils1.pc
build_ign/doxygen/html/: Export_8hh.html  Export_8hh_source.html  annotated.html  api_8md.html  classes.html  classignition_1_1utils_1_1ImplPtr-members.html  classignition_1_1utils_1_1ImplPtr.html  classignition_1_1utils_1_1NeverDestroyed-members.html  classignition_1_1utils_1_1NeverDestroyed.html  cli_8hh.html  cli_8hh_source.html  config_8hh.html  config_8hh_source.html  dir_3476a25e331b867e86ca2302ecad7c01.html  dir_51d659c451c3447ea626ff3f6c94b9d3.html  dir_56773e10032ff5e4ceab2fa1477cf2ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7769ce14ac56fa694f51345d7a9db4e9.html  dir_81911208ddcf051a086893f41d7a20be.html  dir_8ac4e2168f9d129d8fd117e3e42985c3.html  (+45 more)
build_ign/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_ign/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_ign/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
forest_guard_sim/config/: slam_params.yaml
forest_guard_sim/install/: local_setup.sh  setup.sh
forest_guard_sim/launch/: 41068_navigation.launch.py  forest_mapping.launch.py
forest_guard_sim/log/: latest_build
forest_guard_sim_main/: package.xml  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/forestguard_colour/share/forestguard_colour/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/forestguard_colour/share/forestguard_colour/launch/: colour_detector.launch.py  colour_detector_params.launch.py  tree_mapper.launch.py
install/sdf_to_urdf_converter/share/sdf_to_urdf_converter/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
john/: CMakeLists.txt
john/urdf/: husky.urdf.xacro
log/: latest_build  latest_list
old/: gui.py  turtlebot gui.py
projects/slam_demo/: .gitignore  README.md
scripts/: daeheightmap.py  poisson_trees.py
src/: setup.cfg
src/controller_pkg/: CMakeLists.txt  setup.py
src/controller_pkg/include/controller_pkg/: controller.h  quadcopter.h
src/controller_pkg/src/: controller.cpp  laserprocessing.cpp  main_quadcopter.cpp  main_vismarker.cpp  quadcopter.cpp  vis_marker.cpp
src/drone_control/: setup.py
src/forest_controller/: CMakeLists.txt  package.xml
src/forest_drone/: package.xml  setup.cfg  setup.py
src/forest_guard_sim/: CMakeLists.txt  package.xml  setup.py
src/forest_guard_sim/config/: forest.rviz  john.rviz  nav2_params.yaml  slam_params.yaml
src/forest_guard_sim/launch/: autonomous_forest.launch.py  forest_mapping.launch.py  forest_random.launch.py  jPerception.launch.py  john.launch.py  johnGreenTreeTraining.launch.py  johnRedTreeTraining.launch.py  large_forest_husky.launch.py  navigation_map.launch.py  random_forest_husky.launch.py  sample
src/forest_guard_sim/maps/: forest_map.pgm  my_map.yaml
src/forest_guard_sim/models/forest_env/: model.sdf
src/forest_guard_sim/models/tree1/: model.sdf
src/forest_guard_sim/urdf/: husky.gazebo.xacro  husky.urdf.xacro  wheel.urdf.xacro
src/forest_guard_sim/worlds/: forest.world.sdf  forest_world.sdf  forest_world_green.sdf  forest_world_red.sdf
src/forest_localization/: CMakeLists.txt
src/forestguard_behaviour/: package.xml  setup.cfg  setup.py
src/forestguard_colour/: setup.cfg  setup.py
src/forestguard_controller/: CMakeLists.txt
src/forestguard_controller/src/: controller_husky.cpp  main_husky.cpp
src/forestguard_localisation/: CMakeLists.txt
src/forestguard_localisation/include/forestguard_localisation/: amcl_localisation.h
src/forestguard_localisation/src/: amcl_localisation.cpp  main_amcl.cpp
src/forestguard_perception/: package.xml  setup.cfg  setup.py
src/forestguard_sim/: CMakeLists.txt  README.md  package.xml
src/forestguard_ui/: package.xml  setup.cfg  setup.py
src/forestguard_ui/forestguard_ui/: app.py  autonomy.py  battery_sim.py  controller_bridge.py  hsv_mask_node.py  ros_side.py  twist_scaler.py
src/husky_controller/: CMakeLists.txt  package.xml
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/my_drone_pkg/: CMakeLists.txt  package.xml
src/my_drone_pkg/config/: ros_gz_bridge_config.yaml
src/my_drone_pkg/launch/: display.launch.py  drone_integration.launch.py  drone_launch.py
src/my_drone_pkg/models/X4_GPS_LIDAR_RGBD/: drone.urdf  model.config  model.sdf
src/my_drone_pkg/src/: drone_controller.cpp
src/my_drone_pkg/urdf/: X4.urdf.xacro  my_drone.urdf
src/my_drone_pkg/worlds/: world_demo.sdf
src/sdf_to_urdf_converter/: CMakeLists.txt
src/sdf_to_urdf_converter/src/: convert_sdf_to_urdf.cpp
src/turtlebot_ui/: package.xml  setup.cfg  setup.py
utils_install/lib/: libignition-utils1.so.1  libignition-utils1.so.1.5.1
ws_slam/install/: local_setup.sh  setup.bash
ws_slam/src/uav_slam_demo/: CMakeLists.txt  README.md
ws_slam/src/uav_slam_demo/launch/: slam_demo.launch.py
ws_slam/src/uav_slam_demo/worlds/: uav_rgbd_world.sdf
(+751 files in other folders)
