<?xml version="1.0"?>
<package format="3">
  <name>forestguard_ui</name>
  <version>0.0.1</version>
  <description>PySide6 UI for ForestGuard</description>
  <maintainer email="you@example.com">yut</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
