<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sdf_to_urdf_converter</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Claudia@student.uts.edu.au">claudia</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime & build dependencies -->
  <depend>rcutils</depend>
  <depend>urdfdom</depend>
  <depend>urdf_parser_plugin</depend>
  <depend>pluginlib</depend>
  <depend>tinyxml2</depend>
  <depend>sdformat</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
